Added the fonts

--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: Gasalt-Black;
+    src: url(fonts/Gasalt-Black.ttf);
+}
+
+@font-face {
+    font-family: Gasalt-Regular;
+    src: url(fonts/Gasalt-Regular.ttf);
+}
+
+@font-face {
+    font-family: Gasalt-Thin;
+    src: url(fonts/Gasalt-Thin.ttf);
+}
+
 body{
     background-color: lightgray;
     height: 100px;
@@ -10,12 +25,25 @@ body{
     background-color: white;
     display: grid;
     justify-items: center;
-    width: 800px;
+    width: 950px;
     height: 500px;
     justify-items: center;
     padding: 20px;
-    margin: 200px;
-    
+    margin: 250px;   
+}
+
+.profile-picture{
+    width: 180px;
+    height: 180px;
+    clip-path: circle();
+}
+
+.name{
+   font-family: Gasalt-Regular;
+}
+
+.bio {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .social-icon{
