--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ body{
     display: grid;
     justify-items: center;
     width: 950px;
-    height: 500px;
-    justify-items: center;
+    height: 540px;
     padding: 20px;
     margin: 250px;   
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
 
 .profile-picture{
@@ -40,12 +40,36 @@ body{
 
 .name{
    font-family: Gasalt-Regular;
+   text-transform: uppercase;
+   font-weight: bold;
+   font-size: 40px;
+   margin-top: 35px;
 }
 
 .bio {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 5px;
+}
+
+.social-link{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    color: rgb(54, 108, 226);
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 70px;
+}
+
+.social-link:hover{
+    background-color: rgb(54, 108, 226);
+    color:white;
+    border-radius: 20px;
 }
 
 .social-icon{
-    width: 20px;
+    width: 25px;
 }
